# PixelRAG

./: .gitignore  pyproject.toml
deploy/: README.md  api-switch.sh  pixelrag-api-green.service  pixelrag-api-upstream.conf
docs/: screenshot-throughput-optimization.md
embed/src/pixelrag_embed/: chunk.py  embed.py  embed_cpu.py
eval/: .gitignore  README.md  pyproject.toml  reproduce.sh  run_bench.py  run_livevqa.py  serve_up.sh
eval/lib/: __init__.py  benchmarks.py  grader.py  llm.py  retrieval.py  retrievers.py  simpleqa_data.py
index/src/pixelrag_index/: pipelines.py
render/src/pixelrag_render/: render.py
render/src/pixelrag_render/backends/: cdp.py  fast_cdp.py  pdf.py
serve/src/pixelrag_serve/: api.py  render_ondemand.py
tests/: test_article_id.py
train/: filter_self_contained.py  generate_query_pairs.py  generate_text_query_pairs.py  run_generate_batches.sh
train/docs/: synthetic_data_pipeline.md
web/: agent-server.mjs
web/app/api/chat/: route.ts
web/app/chat/: page.tsx
web/app/docs/: page.tsx
web/lib/: api.ts  types.ts
